<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:columnCount="2"
    android:rowCount="4"
    android:useDefaultMargins="true" >

    <ImageView
        android:id="@+id/image_resultado"
        android:layout_width="wrap_content"
        android:layout_height="165dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        app:srcCompat="@drawable/nenhum" />

    <TextView
        android:id="@+id/texto_gasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/texto_gasolina"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/texto_preco_gasolina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:text="@string/texto_preco_gasolina" />

    <SeekBar
        android:id="@+id/seekBar_gasolina"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/seekbar_height"
        android:layout_gravity="fill_horizontal"
        android:min="0"
        android:max="5000"
        android:progress="1" />

    <TextView
        android:id="@+id/texto_alcool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/texto_alcool"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/texto_preco_alcool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|center_vertical"
        android:text="@string/texto_preco_alcool" />
    <SeekBar
        android:id="@+id/seekBar_alcool"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/seekbar_height"
        android:layout_gravity="fill_horizontal"
        android:min="0"
        android:max="5000"
        android:progress="1" />

    <TextView
        android:id="@+id/texto_abasteca_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/texto_abasteca_com"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:id="@+id/texto_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:paddingTop="@dimen/texto_resltado_paddingtop"
        android:text="@string/texto_resultado"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="@dimen/texto_resultado" />


</GridLayout>